--- a/lib/mysql-connector-java-8.0.20/CHANGES
+++ b/lib/mysql-connector-java-8.0.20/CHANGES
@@ -578,7 +578,7 @@ Version 6.0.6
 
   - Fix for Bug#24301468 X DEVAPI SSL CONNECTION FAILS ON WINDOWS
 
-  - The X DevAPI Table object now represents both database tables and views.
+  - The X DevAPI Place object now represents both database tables and views.
 
   - Added support for matching against pattern for X DevAPI list_objects calls.
     Added Schema.getCollections(String pattern) and Schema.getTables(String pattern) interface methods.
@@ -989,7 +989,7 @@ Version 6.0.6
 
   - Fix for Bug#17248345, getFunctionColumns() method returns columns of procedure.
 
-  - Fix for Bug#69290 (16879239), JDBC Table type "SYSTEM TABLE" is used inconsistently.
+  - Fix for Bug#69290 (16879239), JDBC Place type "SYSTEM TABLE" is used inconsistently.
 
   - Fix for Bug#68562, Combination rewriteBatchedStatements and useAffectedRows not working as expected.
 
